redo everything for 100er and 300er

--- a/2-comparison_by_llm.ipynb
+++ b/2-comparison_by_llm.ipynb
@@ -573,10 +573,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "9b05b3bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/leon/miniconda3/envs/ma/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import importlib\n",
     "import csv\n",
@@ -671,21 +680,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "391eb0af",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(100134, 134),\n",
-       " (100134, 300002),\n",
-       " (100136, 136),\n",
-       " (100136, 300002),\n",
-       " (100139, 139)]"
+       "[(100046, 46), (100046, 300002), (100071, 71), (100071, 300002), (100208, 208)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "50770f66",
    "metadata": {},
    "outputs": [
@@ -739,126 +744,133 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- 100134 & 134 -- processed before\n",
-      "-- 100134 & 300002 -- 1 contradictions found.\n",
-      "-- 100136 & 136 -- 3 contradictions found.\n",
-      "-- 100136 & 300002 -- 1 contradictions found.\n",
-      "-- 100139 & 139 -- 1 contradictions found.\n",
-      "-- 100139 & 300002 -- 1 contradictions found.\n",
-      "-- 100046 & 46 -- processed before\n",
-      "-- 100046 & 300001 -- No contradictions found.\n",
-      "-- 100047 & 47 -- 1 contradictions found.\n",
-      "-- 100047 & 300001 -- 1 contradictions found.\n",
-      "-- 100179 & 179 -- processed before\n",
-      "-- 100179 & 300003 -- 1 contradictions found.\n",
-      "-- 100052 & 52 -- No contradictions found.\n",
-      "-- 100052 & 300001 -- 1 contradictions found.\n",
-      "-- 100181 & 181 -- No contradictions found.\n",
-      "-- 100181 & 300003 -- 1 contradictions found.\n",
-      "-- 100059 & 59 -- 1 contradictions found.\n",
-      "-- 100059 & 300001 -- 1 contradictions found.\n",
-      "-- 100066 & 66 -- 1 contradictions found.\n",
-      "-- 100066 & 300001 -- 1 contradictions found.\n",
-      "-- 100198 & 198 -- 1 contradictions found.\n",
-      "-- 100198 & 300003 -- 1 contradictions found.\n",
+      "-- 100046 & 46 -- "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 contradictions found.\n",
+      "-- 100046 & 300002 -- 1 contradictions found.\n",
       "-- 100071 & 71 -- 1 contradictions found.\n",
-      "-- 100071 & 300001 -- 1 contradictions found.\n",
-      "-- 100072 & 72 -- 1 contradictions found.\n",
-      "-- 100072 & 300001 -- 1 contradictions found.\n",
-      "-- 100199 & 199 -- 1 contradictions found.\n",
-      "-- 100199 & 300003 -- 1 contradictions found.\n",
-      "-- 100077 & 77 -- 2 contradictions found.\n",
-      "-- 100077 & 300001 -- 1 contradictions found.\n",
-      "-- 100078 & 78 -- 1 contradictions found.\n",
-      "-- 100078 & 300001 -- 1 contradictions found.\n",
-      "-- 100079 & 79 -- 1 contradictions found.\n",
-      "-- 100079 & 300001 -- 1 contradictions found.\n",
+      "-- 100071 & 300002 -- 1 contradictions found.\n",
       "-- 100208 & 208 -- No contradictions found.\n",
-      "-- 100208 & 300003 -- 1 contradictions found.\n",
-      "-- 100209 & 209 -- 1 contradictions found.\n",
-      "-- 100209 & 300003 -- 1 contradictions found.\n",
-      "-- 100207 & 207 -- 1 contradictions found.\n",
-      "-- 100207 & 300003 -- 1 contradictions found.\n",
-      "-- 100205 & 205 -- 2 contradictions found.\n",
-      "-- 100205 & 300003 -- 1 contradictions found.\n",
-      "-- 100212 & 212 -- 1 contradictions found.\n",
-      "-- 100212 & 300003 -- 1 contradictions found.\n",
-      "-- 100211 & 211 -- 1 contradictions found.\n",
-      "-- 100211 & 300003 -- 1 contradictions found.\n",
-      "-- 100112 & 112 -- 2 contradictions found.\n",
-      "-- 100112 & 300002 -- 2 contradictions found.\n",
-      "-- 100114 & 114 -- 1 contradictions found.\n",
-      "-- 100114 & 300002 -- No contradictions found.\n",
-      "-- 100115 & 115 -- 1 contradictions found.\n",
-      "-- 100115 & 300002 -- 1 contradictions found.\n",
+      "-- 100208 & 300001 -- 1 contradictions found.\n",
       "-- 100119 & 119 -- 1 contradictions found.\n",
-      "-- 100119 & 300002 -- 1 contradictions found.\n",
+      "-- 100119 & 300003 -- 1 contradictions found.\n",
       "-- 100123 & 123 -- 1 contradictions found.\n",
-      "-- 100123 & 300002 -- 1 contradictions found.\n",
-      "-- 100125 & 125 -- 21 contradictions found.\n",
-      "-- 100125 & 300002 -- 2 contradictions found.\n",
-      "-- 100127 & 127 -- 2 contradictions found.\n",
-      "-- 100127 & 300002 -- 1 contradictions found.\n",
-      "-- 400128 & 128 -- 2 contradictions found.\n",
-      "-- 400132 & 132 -- 5 contradictions found.\n",
-      "-- 400133 & 133 -- 2 contradictions found.\n",
-      "-- 400134 & 134 -- 6 contradictions found.\n",
-      "-- 400136 & 136 -- 2 contradictions found.\n",
-      "-- 400205 & 205 -- 6 contradictions found.\n",
-      "-- 400139 & 139 -- 2 contradictions found.\n",
-      "-- 400040 & 40 -- 5 contradictions found.\n",
-      "-- 400042 & 42 -- 6 contradictions found.\n",
-      "-- 400052 & 52 -- 10 contradictions found.\n",
-      "-- 400053 & 53 -- 5 contradictions found.\n",
-      "-- 400183 & 183 -- 6 contradictions found.\n",
-      "-- 400188 & 188 -- 3 contradictions found.\n",
-      "-- 400192 & 192 -- 4 contradictions found.\n",
-      "-- 400065 & 65 -- 11 contradictions found.\n",
-      "-- 400194 & 194 -- 1 contradictions found.\n",
-      "-- 400198 & 198 -- 3 contradictions found.\n",
-      "-- 400199 & 199 -- 2 contradictions found.\n",
-      "-- 400074 & 74 -- 4 contradictions found.\n",
-      "-- 400202 & 202 -- 2 contradictions found.\n",
-      "-- 400204 & 204 -- 6 contradictions found.\n",
-      "-- 400075 & 75 -- 9 contradictions found.\n",
-      "-- 400078 & 78 -- 6 contradictions found.\n",
-      "-- 400079 & 79 -- 7 contradictions found.\n",
-      "-- 400207 & 207 -- 3 contradictions found.\n",
-      "-- 400213 & 213 -- 6 contradictions found.\n",
-      "-- 400214 & 214 -- 1 contradictions found.\n",
-      "-- 400110 & 110 -- 3 contradictions found.\n",
-      "-- 400116 & 116 -- 3 contradictions found.\n",
-      "-- 400059 & 59 -- 6 contradictions found.\n",
-      "-- 300001 & 46 -- 1 contradictions found.\n",
-      "-- 300001 & 47 -- 1 contradictions found.\n",
-      "-- 300001 & 52 -- 2 contradictions found.\n",
-      "-- 300001 & 59 -- 1 contradictions found.\n",
-      "-- 300001 & 66 -- 1 contradictions found.\n",
-      "-- 300001 & 71 -- 2 contradictions found.\n",
-      "-- 300001 & 72 -- 1 contradictions found.\n",
-      "-- 300001 & 77 -- 1 contradictions found.\n",
-      "-- 300001 & 78 -- 2 contradictions found.\n",
-      "-- 300001 & 79 -- 2 contradictions found.\n",
-      "-- 300002 & 134 -- 2 contradictions found.\n",
-      "-- 300002 & 136 -- 6 contradictions found.\n",
-      "-- 300002 & 139 -- 2 contradictions found.\n",
-      "-- 300002 & 112 -- 4 contradictions found.\n",
-      "-- 300002 & 114 -- 2 contradictions found.\n",
-      "-- 300002 & 115 -- 4 contradictions found.\n",
-      "-- 300002 & 119 -- 2 contradictions found.\n",
-      "-- 300002 & 123 -- 2 contradictions found.\n",
-      "-- 300002 & 125 -- 3 contradictions found.\n",
-      "-- 300002 & 127 -- 1 contradictions found.\n",
-      "-- 300003 & 179 -- 4 contradictions found.\n",
-      "-- 300003 & 181 -- 4 contradictions found.\n",
-      "-- 300003 & 198 -- 5 contradictions found.\n",
-      "-- 300003 & 199 -- 5 contradictions found.\n",
-      "-- 300003 & 208 -- 3 contradictions found.\n",
-      "-- 300003 & 209 -- 2 contradictions found.\n",
-      "-- 300003 & 207 -- 2 contradictions found.\n",
-      "-- 300003 & 205 -- 3 contradictions found.\n",
-      "-- 300003 & 212 -- 3 contradictions found.\n",
-      "-- 300003 & 211 -- 2 contradictions found.\n"
+      "-- 100123 & 300003 -- 1 contradictions found.\n",
+      "-- 100111 & 111 -- 2 contradictions found.\n",
+      "-- 100111 & 300003 -- 2 contradictions found.\n",
+      "-- 100113 & 113 -- 2 contradictions found.\n",
+      "-- 100113 & 300003 -- 1 contradictions found.\n",
+      "-- 100122 & 122 -- 1 contradictions found.\n",
+      "-- 100122 & 300003 -- 1 contradictions found.\n",
+      "-- 100124 & 124 -- 4 contradictions found.\n",
+      "-- 100124 & 300003 -- 1 contradictions found.\n",
+      "-- 100129 & 129 -- 1 contradictions found.\n",
+      "-- 100129 & 300003 -- 1 contradictions found.\n",
+      "-- 100131 & 131 -- 1 contradictions found.\n",
+      "-- 100131 & 300003 -- 1 contradictions found.\n",
+      "-- 100135 & 135 -- 1 contradictions found.\n",
+      "-- 100135 & 300003 -- 1 contradictions found.\n",
+      "-- 100138 & 138 -- 1 contradictions found.\n",
+      "-- 100138 & 300003 -- No contradictions found.\n",
+      "-- 100178 & 178 -- 8 contradictions found.\n",
+      "-- 100178 & 300001 -- 1 contradictions found.\n",
+      "-- 100182 & 182 -- 3 contradictions found.\n",
+      "-- 100182 & 300001 -- 1 contradictions found.\n",
+      "-- 100185 & 185 -- 1 contradictions found.\n",
+      "-- 100185 & 300001 -- 1 contradictions found.\n",
+      "-- 100191 & 191 -- No contradictions found.\n",
+      "-- 100191 & 300001 -- 1 contradictions found.\n",
+      "-- 100195 & 195 -- 1 contradictions found.\n",
+      "-- 100195 & 300001 -- 1 contradictions found.\n",
+      "-- 100197 & 197 -- No contradictions found.\n",
+      "-- 100197 & 300001 -- 1 contradictions found.\n",
+      "-- 100201 & 201 -- 2 contradictions found.\n",
+      "-- 100201 & 300001 -- 2 contradictions found.\n",
+      "-- 100206 & 206 -- 1 contradictions found.\n",
+      "-- 100206 & 300001 -- 1 contradictions found.\n",
+      "-- 100210 & 210 -- No contradictions found.\n",
+      "-- 100210 & 300001 -- 1 contradictions found.\n",
+      "-- 100041 & 41 -- 1 contradictions found.\n",
+      "-- 100041 & 300002 -- 1 contradictions found.\n",
+      "-- 100044 & 44 -- No contradictions found.\n",
+      "-- 100044 & 300002 -- 1 contradictions found.\n",
+      "-- 100049 & 49 -- 1 contradictions found.\n",
+      "-- 100049 & 300002 -- 1 contradictions found.\n",
+      "-- 100054 & 54 -- 1 contradictions found.\n",
+      "-- 100054 & 300002 -- 1 contradictions found.\n",
+      "-- 100055 & 55 -- 1 contradictions found.\n",
+      "-- 100055 & 300002 -- 1 contradictions found.\n",
+      "-- 100062 & 62 -- 1 contradictions found.\n",
+      "-- 100062 & 300002 -- 1 contradictions found.\n",
+      "-- 100067 & 67 -- 1 contradictions found.\n",
+      "-- 100067 & 300002 -- 1 contradictions found.\n",
+      "-- 100069 & 69 -- 1 contradictions found.\n",
+      "-- 100069 & 300002 -- 1 contradictions found.\n",
+      "-- 400128 & 128 -- processed before\n",
+      "-- 400132 & 132 -- processed before\n",
+      "-- 400133 & 133 -- processed before\n",
+      "-- 400134 & 134 -- processed before\n",
+      "-- 400136 & 136 -- processed before\n",
+      "-- 400205 & 205 -- processed before\n",
+      "-- 400139 & 139 -- processed before\n",
+      "-- 400040 & 40 -- processed before\n",
+      "-- 400042 & 42 -- processed before\n",
+      "-- 400052 & 52 -- processed before\n",
+      "-- 400053 & 53 -- processed before\n",
+      "-- 400183 & 183 -- processed before\n",
+      "-- 400188 & 188 -- processed before\n",
+      "-- 400192 & 192 -- processed before\n",
+      "-- 400065 & 65 -- processed before\n",
+      "-- 400194 & 194 -- processed before\n",
+      "-- 400198 & 198 -- processed before\n",
+      "-- 400199 & 199 -- processed before\n",
+      "-- 400074 & 74 -- processed before\n",
+      "-- 400202 & 202 -- processed before\n",
+      "-- 400204 & 204 -- processed before\n",
+      "-- 400075 & 75 -- processed before\n",
+      "-- 400078 & 78 -- processed before\n",
+      "-- 400079 & 79 -- processed before\n",
+      "-- 400207 & 207 -- processed before\n",
+      "-- 400213 & 213 -- processed before\n",
+      "-- 400214 & 214 -- processed before\n",
+      "-- 400110 & 110 -- processed before\n",
+      "-- 400116 & 116 -- processed before\n",
+      "-- 400059 & 59 -- processed before\n",
+      "-- 300002 & 41 -- 1 contradictions found.\n",
+      "-- 300002 & 44 -- 1 contradictions found.\n",
+      "-- 300002 & 46 -- 1 contradictions found.\n",
+      "-- 300002 & 49 -- 1 contradictions found.\n",
+      "-- 300002 & 54 -- 2 contradictions found.\n",
+      "-- 300002 & 55 -- 2 contradictions found.\n",
+      "-- 300002 & 62 -- 1 contradictions found.\n",
+      "-- 300002 & 67 -- 1 contradictions found.\n",
+      "-- 300002 & 69 -- 1 contradictions found.\n",
+      "-- 300002 & 71 -- 1 contradictions found.\n",
+      "-- 300003 & 111 -- 3 contradictions found.\n",
+      "-- 300003 & 113 -- 2 contradictions found.\n",
+      "-- 300003 & 119 -- 1 contradictions found.\n",
+      "-- 300003 & 122 -- 5 contradictions found.\n",
+      "-- 300003 & 123 -- 2 contradictions found.\n",
+      "-- 300003 & 124 -- 2 contradictions found.\n",
+      "-- 300003 & 129 -- 2 contradictions found.\n",
+      "-- 300003 & 131 -- 2 contradictions found.\n",
+      "-- 300003 & 135 -- 2 contradictions found.\n",
+      "-- 300003 & 138 -- 2 contradictions found.\n",
+      "-- 300001 & 178 -- 4 contradictions found.\n",
+      "-- 300001 & 182 -- 1 contradictions found.\n",
+      "-- 300001 & 185 -- 2 contradictions found.\n",
+      "-- 300001 & 191 -- 3 contradictions found.\n",
+      "-- 300001 & 195 -- 1 contradictions found.\n",
+      "-- 300001 & 197 -- 2 contradictions found.\n",
+      "-- 300001 & 201 -- 9 contradictions found.\n",
+      "-- 300001 & 206 -- 1 contradictions found.\n",
+      "-- 300001 & 208 -- 1 contradictions found.\n",
+      "-- 300001 & 210 -- 1 contradictions found.\n"
      ]
     }
    ],
@@ -885,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "c5f5fcc4",
    "metadata": {},
    "outputs": [
@@ -919,37 +931,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>gpt-4.1</td>\n",
-       "      <td>0.986111</td>\n",
+       "      <td>0.833333</td>\n",
        "      <td>144.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>gpt-4o</td>\n",
-       "      <td>0.947674</td>\n",
+       "      <td>gpt-4.1-mini</td>\n",
+       "      <td>0.831395</td>\n",
        "      <td>172.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>gpt-4.1-mini</td>\n",
-       "      <td>0.936047</td>\n",
+       "      <td>gpt-4o</td>\n",
+       "      <td>0.819767</td>\n",
        "      <td>172.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>gemini-2.5-flash-preview-05-20</td>\n",
-       "      <td>0.843023</td>\n",
+       "      <td>0.738372</td>\n",
        "      <td>172.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>gpt-4.1-nano</td>\n",
-       "      <td>0.666667</td>\n",
+       "      <td>0.641026</td>\n",
        "      <td>39.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>gpt-4o-mini</td>\n",
-       "      <td>0.633333</td>\n",
+       "      <td>0.300000</td>\n",
        "      <td>60.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -958,15 +970,15 @@
       ],
       "text/plain": [
        "                            model  accuracy  count\n",
-       "0                         gpt-4.1  0.986111  144.0\n",
-       "1                          gpt-4o  0.947674  172.0\n",
-       "2                    gpt-4.1-mini  0.936047  172.0\n",
-       "3  gemini-2.5-flash-preview-05-20  0.843023  172.0\n",
-       "4                    gpt-4.1-nano  0.666667   39.0\n",
-       "5                     gpt-4o-mini  0.633333   60.0"
+       "0                         gpt-4.1  0.833333  144.0\n",
+       "1                    gpt-4.1-mini  0.831395  172.0\n",
+       "2                          gpt-4o  0.819767  172.0\n",
+       "3  gemini-2.5-flash-preview-05-20  0.738372  172.0\n",
+       "4                    gpt-4.1-nano  0.641026   39.0\n",
+       "5                     gpt-4o-mini  0.300000   60.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
