--- a/4-retrieve.ipynb
+++ b/4-retrieve.ipynb
@@ -156,6 +156,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a593aec0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Evaluate retrieval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "27c7fb4b",
    "metadata": {},
    "outputs": [
